<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="12dp">

    <TextView
        android:id="@+id/printer_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/host_settings_edit_printer_name" />

    <EditText
        android:id="@+id/printer_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/host_settings_edit_printer_name_hint"
        android:textSize="18dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/printer_name_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/host_settings_edit_printer_name_error_invalid"
        android:visibility="gone"
        android:textSize="18dp"
        android:textColor="@color/colorAlereRed" />

    <TextView
        android:id="@+id/printer_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/host_settings_edit_printer_address" />

    <EditText
        android:id="@+id/printer_address_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/host_settings_edit_printer_enter_printer_name"
        android:textSize="18dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/printer_address_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/host_settings_edit_printer_address_error_invalid"
        android:visibility="gone"
        android:textSize="18dp"
        android:textColor="@color/colorAlereRed" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/print_calculated_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layoutDirection="rtl"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:text="@string/host_settings_edit_printer_print_calculated_result"
        />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/print_corrected_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layoutDirection="rtl"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:text="@string/host_settings_edit_printer_print_corrected_result"
        />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/print_test_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layoutDirection="rtl"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:text="@string/host_settings_edit_printer_print_test_info"
        />

    <TextView
        android:id="@+id/printer_type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:text="@string/host_settings_edit_printer_type" />

    <Spinner
        android:id="@+id/printer_type_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/connection_type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18dp"
        android:text="@string/host_settings_edit_printer_connection_type" />

    <Spinner
        android:id="@+id/connectin_type_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_Positive"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/primaryBlueNew"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/colorWhite"/>

</LinearLayout>